fixed overflow on burgerMenu

--- a/src/components/Header/_header.scss
+++ b/src/components/Header/_header.scss
@@ -92,7 +92,7 @@
       transform: rotate(-405deg);
     }
   }
-  input ~ nav {
+  input ~ .nav-mobile {
     background: black;
     position: fixed;
     top: 0;
@@ -112,6 +112,7 @@
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
+      width:100%;
       > li {
         opacity: 0;
         transition: .5s;
@@ -131,6 +132,11 @@
       }
     }
   }
+
+  li:last-of-type > a:last-child {
+    height: auto;
+  }
+
   input:checked ~ nav {
     height: 100%;
     transition-delay: 0s;
